workspace = { members = ["test_parser"] }
[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
proc-macro2 = { version = "1.0.81", features = ["span-locations"] }
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full", "extra-traits"] }
